--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,9 @@ body {
 	font-family: 'Bitter-Regular', Tahoma, Geneva, sans-serif;
 	font-size: 13px;
 	line-height: 1.7em;
-	background-color: #293611;
+	background-color: #ffffff;
 	background-image: url(../images/argiles_body.jpg);
-	background-repeat: repeat
+	background-repeat: repeat;
 }
 
 a, a:link, a:visited {
